--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,15 +1,15 @@
-<form>
+<form (ngSubmit)="login()">
     <p-panel>
         <ng-template pTemplate="header">
             Enter credentials in order to login
         </ng-template>
         <div class="flex-column">
             <span class="p-float-label text-center">
-                <input id="input-username" type="text" pInputText>
+                <input id="input-username" type="text" pInputText name="login" [(ngModel)]="model.login">
                 <label for="input-username">Username/email</label>
             </span>
             <span class="p-float-label">
-                <input id="input-password" type="password" pInputText>
+                <input id="input-password" type="password" pInputText name="password" [(ngModel)]="model.password">
                 <label for="input-password">Password</label>
             </span>
         </div>
@@ -18,7 +18,7 @@
             <div class="flex justify-content-between">
                 <a id="forgotpassword" routerLink="/forgotpassword">Forgot password?</a>
                 <button pButton class="action-button p-button-submit grid justify-content-center" type="submit"
-                label="Login" (click)="login()"></button>
+                label="Login"></button>
             </div>
         </ng-template>
     </p-panel>
