--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,10 @@
         <ng-template pTemplate="header">
             Enter credentials in order to login
         </ng-template>
+        <div ></div>
         <div class="flex-column">
+            <p-message class ="msg" *ngIf="incorrectCredentials" severity="error" text="Incorrect credeintials."></p-message>
+            <p-message class ="msg" *ngIf="loginSuccess" severity="success" text="Login successful."></p-message> 
             <span class="p-float-label text-center">
                 <input id="input-username" type="text" pInputText name="login" [(ngModel)]="model.login">
                 <label for="input-username">Username/email</label>
@@ -13,7 +16,6 @@
                 <label for="input-password">Password</label>
             </span>
         </div>
-
         <ng-template pTemplate="footer">
             <div class="flex justify-content-between">
                 <a id="forgotpassword" routerLink="/forgotpassword">Forgot password?</a>
