--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p-menubar>
+<p-menubar [model]="items">
     <div *ngIf="!isLogged()">
         <button pButton label="Sing in" (click)="login()"></button>
         <button pButton label="Sign up" (click)="register()"></button>
