--- a/src/app/components/todo-list-overview/todo-list-overview.component.html
+++ b/src/app/components/todo-list-overview/todo-list-overview.component.html
@@ -1,1 +1,30 @@
-<p>todo-list-overview works!</p>
+<p-toolbar>
+    <div class="p-toolbar-group-left">
+        <button pButton class="p-button-success p-button-rounded mr-1" label="Element" icon="pi pi-plus" iconPos="left" (click)="openNewElementDialog()"></button>
+        <button pButton class="p-button-success p-button-rounded" label="List" icon="pi pi-plus" iconPos="left" (click)="openNewListDialog()"></button>
+    </div>
+    <div class="p-toolbar-group-right">
+        <button pButton type="button" icon="pi pi-trash" class="p-button-danger" (click)="deleteList()"></button>
+    </div>
+</p-toolbar>
+<div class="table">
+    <p-table responsiveLayout="scroll" [value]="todoList.elements">
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th *ngFor="let header of tableHeaders">{{header}}</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-element>
+            <tr>
+                <td>
+                    <p-checkbox [(ngModel)]="element.done" [binary]="true"></p-checkbox>
+                </td>
+                <td>{{element.name}}</td>
+                <td>{{element.priority}}</td>
+                <td>{{element.addedDate}}</td>
+                <td>{{element.dueDate}}</td>
+                <td>{{element.description}}</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
