--- a/src/app/components/todo-list-view/todo-list-view.component.html
+++ b/src/app/components/todo-list-view/todo-list-view.component.html
@@ -2,6 +2,9 @@
     <div class="p-toolbar-group-left">
         <button pButton class="p-button-success p-button-rounded mr-1" label="Element" icon="pi pi-plus" iconPos="left"
             (click)="openNewElementDialog()"></button>
+        <button *ngIf="todoList.isPrimary" [disabled]="true" pButton type="button" class="p-button-danger p-button-rounded" icon="pi pi-heart" ></button>
+        <button *ngIf="!todoList.isPrimary" pButton type="button" class="p-button-text p-button-danger p-button-rounded" icon="pi pi-heart"
+            (click)="markAsPrimary()"></button>
     </div>
     <div class="p-toolbar-group-right">
         <button pButton type="button" icon="pi pi-trash" class="p-button-danger" (click)="deleteList()"></button>
