--- a/src/app/components/todo-list-overview/todo-list-overview.component.html
+++ b/src/app/components/todo-list-overview/todo-list-overview.component.html
@@ -15,7 +15,7 @@
                 {{overview.name}}
                 <div class="p-toolbar-group-right">
                     <button pButton type="button" icon="pi pi-pencil" class="ml-1 p-button-text p-button-rounded p-button-warning" 
-                    (click)="openEditListName(overview.listId, overview.name)"></button>
+                    (click)="$event.stopPropagation(); openEditListName(overview.listId, overview.name)"></button>
                 </div>
             </ng-template>
             <app-todo-list-view [listId]="overview.listId" (eventType)="refresh($event)">
