Now able to add element to list + now sorting by done property

--- a/src/app/components/todo-list-element/todo-list-element.component.html
+++ b/src/app/components/todo-list-element/todo-list-element.component.html
@@ -1,20 +1,14 @@
-<div class="flex">
+<div class="flex border-round" [style.background-color]="element.done? 'var(--bluegray-100)' : 'white'">
     <div class="flex mr-3">
         <p-checkbox [(ngModel)]="element.done" [binary]="true" (click)="markElement()"></p-checkbox>
     </div>
     <div class="flex flex-column">
         <div class="p-component">
             <h3>{{element.name}}</h3>
-            <!-- <span class="font-bold">name: </span>
-            {{element.name}} -->
         </div>
         <div class="mb-2 p-component">
             <span class="font-bold">priority: </span>
             {{element.priority}}
-        </div>
-        <div class="mb-2 p-component">
-            <span class="font-bold">description: </span>
-            {{element.description}}
         </div>
         <div class="mb-2 p-component">
             <span class="font-bold">due date: </span>
