--- a/src/app/components/todo-list-overview/todo-list-overview.component.html
+++ b/src/app/components/todo-list-overview/todo-list-overview.component.html
@@ -30,12 +30,14 @@
             New todo list
         </ng-template>
         <div class="flex-column">
-            <span class="p-float-label text-center mb-2">
+            <span class="p-float-label text-center mb-4 mt-4">
                 <input id="input-list-name" type="text" pInputText name="List name" [(ngModel)]="newListModel.name">
                 <label for="input-list-name">List name</label>
             </span>
-            <p-checkbox [(ngModel)]="newListModel.isPrimary" name="primary" [binary]="true" [label]="'default?'">
-            </p-checkbox>
+            <span class="mt-4">
+                <p-checkbox [(ngModel)]="newListModel.isPrimary" name="primary" [binary]="true" [label]="'default?'">
+                </p-checkbox>
+            </span>
         </div>
         <ng-template pTemplate="footer">
                 <div class="flex justify-content-center">
