--- a/src/app/components/todo-list-view/todo-list-view.component.html
+++ b/src/app/components/todo-list-view/todo-list-view.component.html
@@ -12,7 +12,35 @@
 </p-toolbar>
 <div class="table">
     <div *ngFor="let element of todoList.elements">
-        <app-todo-list-element [element]="element"></app-todo-list-element>
+        <app-todo-list-element [element]="element" (eventType)="refresh($event)"></app-todo-list-element>
         <hr style="width: 100%;border-color: var(--blue-400);">
     </div>
 </div>
+
+<form (ngSubmit)="createNewElement()">
+    <p-dialog [(visible)]="showNewElementDialog">
+        <ng-template pTemplate="header">
+            New element
+        </ng-template>
+        <div class="flex-column">
+            <span class="p-float-label text-center mt-4">
+                <input id="input-element-name" type="text" pInputText name="Element name" [(ngModel)]="newElement.name">
+                <label for="input-element-name">Element name</label>
+            </span>
+            <span class="p-float-label text-center mt-4">
+                <p-calendar inputId="input-date" name="Due date" [(ngModel)]="newElement.dueDate" datetime="dd.MM.yyyy HH:mm" dateFormat="dd.mm.yy" appendTo="body" [showTime]="true" hourFormat="24"></p-calendar>
+                <label for="input-date">Due date</label>
+            </span>
+            <span class="p-float-label mt-4">
+                <p-dropdown inputId="input-priority" [style]="{ width:'100%' }" appendTo="body" [options]="availablePriorities" [(ngModel)]="newElement.priority" name="Priority" placeholder="Priority"></p-dropdown>
+                <label for="input-priority">Priority</label>
+            </span>
+        </div>
+        <ng-template pTemplate="footer">
+                <div class="flex justify-content-center">
+                    <button pButton class="action-button p-button-submit" type="submit"
+                        label="Create"></button>
+                </div>
+        </ng-template>
+    </p-dialog>
+</form>
