--- a/src/app/components/todo-list-element/todo-list-element.component.html
+++ b/src/app/components/todo-list-element/todo-list-element.component.html
@@ -1,18 +1,23 @@
-<div class="flex border-round" [style.background-color]="element.done? 'var(--bluegray-100)' : 'white'">
+<div class="grid border-round" [style.background-color]="element.done? 'var(--bluegray-100)' : 'white'">
     <div class="flex mr-3">
         <p-checkbox [(ngModel)]="element.done" [binary]="true" (click)="markElement()"></p-checkbox>
     </div>
-    <div class="flex flex-column">
-        <div class="p-component">
-            <h3>{{element.name}}</h3>
+    <div class="col-11">
+        <div class="flex flex-column">
+            <div class="p-component">
+                <h3>{{element.name}}</h3>
+            </div>
+            <div class="mb-2 p-component">
+                <span class="font-bold">priority: </span>
+                {{element.priority}}
+            </div>
+            <div class="mb-2 p-component">
+                <span class="font-bold">due date: </span>
+                {{element.dueDate}}
+            </div>
         </div>
-        <div class="mb-2 p-component">
-            <span class="font-bold">priority: </span>
-            {{element.priority}}
-        </div>
-        <div class="mb-2 p-component">
-            <span class="font-bold">due date: </span>
-            {{element.dueDate}}
-        </div>
+    </div>
+    <div class="col align-self-center">
+        <button pButton type="button" (click)="deleteElement()" icon="pi pi-trash" class="p-button-danger"></button>
     </div>
 </div>
