--- a/src/app/outcome/outcome-overview/outcome-overview.component.html
+++ b/src/app/outcome/outcome-overview/outcome-overview.component.html
@@ -1,5 +1,17 @@
 <button pButton class="action-button p-button-submit" (click)="openNewOutcomeDialog()" label="New outcome"></button>
 
+<p-tabView>
+    <p-tabPanel header="Outcomes">
+        <app-single-outcomes-overview></app-single-outcomes-overview>
+    </p-tabPanel>
+    <p-tabPanel header="Contunity outcomes">
+        <app-continuity-outcomes-overview></app-continuity-outcomes-overview>
+    </p-tabPanel>
+    <p-tabPanel header="Shopping list outcomes">
+        <app-shopping-list-outcomes-overview></app-shopping-list-outcomes-overview>
+    </p-tabPanel>
+</p-tabView>
+
 <!-- <form (ngSubmit)="createNewOutcome()"> -->
 <p-dialog [(visible)]="showNewOutcomeDialog">
     <ng-template pTemplate="header">
