Minor styling changes

--- a/src/app/outcome/outcome-overview/outcome-overview.component.html
+++ b/src/app/outcome/outcome-overview/outcome-overview.component.html
@@ -1,7 +1,7 @@
-<button pButton class="mx-1 action-button p-button-submit" (click)="openNewOutcomeDialog()"
-    label="New outcome"></button>
-<button pButton class="mx-1 action-button p-button-submit" (click)="openNewCategoryDialog()"
-    label="New category"></button>
+<button pButton class="my-3 mr-2 action-button p-button-rounded p-button-submit" (click)="openNewOutcomeDialog()" icon="pi pi-plus" iconPos="left"
+    label="Outcome"></button>
+<button pButton class="my-3 action-button p-button-rounded p-button-submit" (click)="openNewCategoryDialog()" icon="pi pi-plus" iconPos="left"
+    label="Category"></button>
 
 <p-tabView>
     <p-tabPanel header="Outcomes">
