--- a/src/app/shopping-list/shopping-list-element/shopping-list-element.component.html
+++ b/src/app/shopping-list/shopping-list-element/shopping-list-element.component.html
@@ -1,1 +1,23 @@
-<p>shopping-list-element works!</p>
+<div class="grid mt-1">
+    <div class="border-left-3 flex pl-3 mr-3" [style.border-color]="element.done? 'var(--green-400)' : 'var(--yellow-500)'">
+        <p-checkbox [(ngModel)]="element.done" [binary]="true" (click)="markElement()"></p-checkbox>
+    </div>
+    <div class="col-11">
+        <div class="flex flex-column">
+            <div class="p-component">
+                <h3 [class.line-through]="element.done">{{element.name}}</h3>
+            </div>
+            <div class="p-component">
+                <span class="font-bold">category: </span>
+                {{element.category}}
+            </div>
+            <div class="p-component">
+                <span class="font-bold">value: </span>
+                {{element.value}}
+            </div>
+        </div>
+    </div>
+    <div class="col align-self-center">
+        <button pButton type="button" (click)="deleteElement()" icon="pi pi-trash" class="p-button-danger"></button>
+    </div>
+</div>
